--- a/coursebundler/public/manifest.json
+++ b/coursebundler/public/manifest.json
@@ -1,4 +1,5 @@
 {
+  "Access-Control-Allow-Origin": "http://localhost:3000",
   "short_name": "Course Bundler",
   "name": "Create React App Sample",
   "icons": [
